--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,30 +1,13 @@
 {
   "compilerOptions": {
-    "allowSyntheticDefaultImports": true,
     "outDir": "./build",
-    "baseUrl": "./src",
     "esModuleInterop": true,
+    "module": "commonjs",
     "strict": true,
+    "noImplicitAny": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "module": "ESNext",
-    "target": "es6",
-    "allowJs": true,
-    "noImplicitAny": true,
-    "moduleResolution": "node",
-    "importHelpers": true,
-    "types": [
-      "node",
-    ],
-    "lib": [
-      "es5",
-      "es2015"
-    ]
   },
-  "include": [
-    "src/**/*",
-  ],
-  "exclude": [
-      "node_modules/*"
-  ]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules"]
 }
